--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="./styles/bio.scss">
 </head>
 <body>
-    <h1>hello world</h1>
+  <header>
+    <div class="header_logo-item">BANDSITE</div>
+    <nav>
+        <a class="header_navbar-item" href="">Biography</a>
+        <a class="navbar_navbar-item" href="">Shows</a>
+    </nav>
+  </header>
 </body>
 </html>
