--- a/index.html
+++ b/index.html
@@ -1,19 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./styles/bio.css">
-    <link rel="stylesheet" href="./styles/bio.scss">
-</head>
-<body>
-  <header>
-    <div class="header_logo-item">BANDSITE</div>
-    <nav>
-        <a class="header_navbar-item" href="">Biography</a>
-        <a class="navbar_navbar-item" href="">Shows</a>
-    </nav>
-  </header>
-</body>
+    <link rel="stylesheet" href="./styles/bio.css" />
+    <title>bandsite</title>
+  </head>
+  <body>
+    <header class="header">
+       <a href=""><img class="header__Logo" src="./assets/Logo/Logo-bandsite.svg" alt=""></a> 
+      <nav class="navbar">
+        <ul class="navbar__list">
+            <li class="navbar__list--item navbar__list--item-underline">Biography</li>
+            <li class="navbar__list--item">Shows</li>
+        </ul>
+    
+      </nav>
+    </header>
+
+    <section class="hero">
+        <h1 class="hero__heading">The Bees Knees</h1>
+    </section>
+    <main>
+      <section class="about">
+        <h2 class="about__heading">About the Musicians</h2>
+        <div class="about__container">
+            <div class="about__container--item">
+                <img class="container--img" src="./assets/Images/band.jpg"  alt="">
+                <p class="container-paragraph">“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”</p>
+                <p class="container-paragraph">- Bryan Teddy, lead vocalist of The Bees Knees</p>
+            </div>
+            <div class="about__container--item">
+                <h4 class="articale-titele">The Bees Knees</h4>
+                <div class="articale">
+                    <p class="articale-content">The Bees Knees is a pop rock band originating from San Francisco, California. The band consists of lead vocalist Bryan Teddy, guitarist Mack Tolkens, guitarist Andrew Green, bassist Kent Zulkee and drummer Freddie Fischer. The band achieved its first commercial success as an unsigned act, drawing attention from manager Cam Adams. Having worked with other popular acts (The Elephant In The Room, One Trick Pony, The Cat’s Meow), Adams was confident the band could succeed even further, pushing them to sign with Magenta Records. </p>
+                </div>
+                <div class="articale">
+                    <p class="articale-content">From there, the band has soared, gaining international recognition and ranking in the top 10 on the Poster Charts. New fans immediately fell in love with the band’s original and organic attitude, solidifying their place as one of the hottest and fastest up and coming acts of this century. Fans affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic performances on stage. Looking forward to touring in the future, The Bees Knees are currently recording their second studio album, looking to be released in late 2021</p>
+                </div>
+            </div>
+        </div>
+      </section>
+      <section class="gallery">
+        <h2 class="gallery-heading ">Photo Gallery</h2>
+        <div class="gallery__contianer">
+            <div class="gallery__container--item">
+                <div class="container--img"><img src="./assets/Images/Photo-gallery-1.jpg" alt=""></div>
+                <div class="container--img"><img src="./assets/Images/Photo-gallery-2.jpg" alt=""></div>
+                <div class="container--img"><img src="./assets/Images/Photo-gallery-3.jpg" alt=""></div>
+                <div class="container--img"><img src="./assets/Images/Photo-gallery-4.jpg" alt=""></div>
+                <div class="container--img"><img src="./assets/Images/Photo-gallery-5.jpg" alt=""></div>
+                <div class="container--img"><img src="./assets/Images/Photo-gallery-6.jpg" alt=""></div>
+                <div class="container--img"><img src="./assets/Images/Photo-gallery-7.jpg" alt=""></div>
+                <div class="container--img"><img src="./assets/Images/Photo-gallery-8.jpg" alt=""></div>
+                <div class="container--img"><img src="./assets/Images/Photo-gallery-9.jpg" alt=""></div>
+            </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+        <div class="footer__container">
+            <div class="footer__container--item">
+                <div class="footer--heading">
+                    <h2>Get in Touch</h2>
+                </div>
+                <div class="footer__icon">
+                    <a class="footer__icon--link" href="http://instagram.com">
+                        <img src="./assets/Icons/SVG/Icon-instagram.svg" alt="instagram">
+                    </a>
+                </div> 
+                <div class="footer__icon">
+                    <a class="footer__icon--link" href="http://facebook.com">
+                        <img src="./assets/Icons/SVG/Icon-facebook.svg" alt="facebook">
+                    </a>
+                </div>
+                <div class="footer__icon">
+                    <a class="footer__icon--link" href="http://twitter.com">
+                        <img src="./assets/Icons/SVG/Icon-twitter.svg" alt="twitter">
+                    </a>
+                </div>
+                <div class="footer__contact">
+                    <p class="footer__contact--name">Cam Adams</p>
+                    <p class="footer__contact--rule">The beens knees management</p>
+                    <p class="footer__contact--address">503 Broadway penthouse,
+                        New York ,NY 10012,USA
+                    </p>
+                    <p class="footer__contact--email">info@thebeesknees.com</p>
+                </div>
+                   
+                    <div class="footer__contact">
+                        <p class="footer__contact--name">Pearl Gregg</p>
+                        <p class="footer__contact--rule">Limitless Artist Group</p>
+                        <p class="footer__contact--address">Booking agent for,
+                            US / South America / japan
+                        </p>
+                        <p class="footer__contact--email">pearl.gregg@limitlessag.com</p>
+                    </div>
+                    <div class="footer__contact">
+                    <p class="footer__contact--name">Carson Whyte</p>
+                    <p class="footer__contact--rule">ARCH Entertainment</p>
+                    <p class="footer__contact--address">Booking Agent for,
+                        UK / EU / AU
+                    </p>
+                    <p class="footer__contact--email">cwtyte@archentertainment</p>
+                </div> 
+                <div class="footer__logo">
+                    <a href=""><img class="footer__logo-img" src="./assets/Logo/Logo-bandsite.svg" alt=""></a> 
+                </div>
+                <div class="footer__copy">
+                    <p>copyright The Bees Knees &copy; 2021 all rights Reserved</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+  </body>
 </html>
