mobile version gallery part changes

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h1 class="hero__heading">The Bees Knees</h1>
     </section>
     <main>
-      <section>
+      <section class="aboutt">
         <div class="about">
           <h2 class="about__heading">About the Musicians</h2>
           <div class="about__container">
@@ -80,7 +80,7 @@
       <section class="gallery">
         <h2 class="gallery-heading">Photo Gallery</h2>
         <div class="gallery__container">
-          <div class="gallery__container--item">
+          <div class="gallery__container--img">
             <img src="./assets/Images/Photo-gallery-1.jpg" alt="" />
           </div>
           <div class="gallery__container--img">
