--- a/index.html
+++ b/index.html
@@ -26,143 +26,151 @@
       <h1 class="hero__heading">The Bees Knees</h1>
     </section>
     <main>
-      <section class="aboutt">
+      <section>
         <div class="about">
           <h2 class="about__heading">About the Musicians</h2>
-          <div class="about__container">
-            <img
-              class="about__container--img"
-              src="./assets/Images/band.jpg"
-              alt=""
-            />
-            <p class="about__container--paragraph">
-              “We push each other to be the best. It’s not uncommon for one of
-              us to say ‘this needs to be better, back to the drawing board’”
-            </p>
-            <p class="about__container--paragraph">
-              - Bryan Teddy, lead vocalist of The Bees Knees
-            </p>
-          </div>
-          <div class="about__container">
-            <p class="about__container-titele">The Bees Knees</p>
-        <div class="container">
-            <div class="about__container--articale">
-              <p class="articale-content">
-                The Bees Knees is a pop rock band originating from San
-                Francisco, California. The band consists of lead vocalist Bryan
-                Teddy, guitarist Mack Tolkens, guitarist Andrew Green, bassist
-                Kent Zulkee and drummer Freddie Fischer. The band achieved its
-                first commercial success as an unsigned act, drawing attention
-                from manager Cam Adams. Having worked with other popular acts
-                (The Elephant In The Room, One Trick Pony, The Cat’s Meow),
-                Adams was confident the band could succeed even further, pushing
-                them to sign with Magenta Records.
+          <div class="about__box">
+            <div class="about__container">
+              <img
+                class="about__container--img"
+                src="./assets/Images/band.jpg"
+                alt=""
+              />
+              <p class="about__container--paragraph">
+                “We push each other to be the best. It’s not uncommon for one of
+                us to say ‘this needs to be better, back to the drawing board’”
+              </p>
+              <p class="about__container--paragraph">
+                - Bryan Teddy, lead vocalist of The Bees Knees
               </p>
             </div>
-            <div class="about__container--articale">
-              <p class="articale-content">
-                From there, the band has soared, gaining international
-                recognition and ranking in the top 10 on the Poster Charts. New
-                fans immediately fell in love with the band’s original and
-                organic attitude, solidifying their place as one of the hottest
-                and fastest up and coming acts of this century. Fans
-                affectionately refer to themselves as “The Hive” and are drawn
-                to their candid and authentic performances on stage. Looking
-                forward to touring in the future, The Bees Knees are currently
-                recording their second studio album, looking to be released in
-                late 2021
-              </p>
+            <div class="about__container">
+              <p class="about__container-titele">The Bees Knees</p>
+              <div class="container">
+                <div class="about__container--articale">
+                  <p class="articale-content">
+                    The Bees Knees is a pop rock band originating from San
+                    Francisco, California. The band consists of lead vocalist
+                    Bryan Teddy, guitarist Mack Tolkens, guitarist Andrew Green,
+                    bassist Kent Zulkee and drummer Freddie Fischer. The band
+                    achieved its first commercial success as an unsigned act,
+                    drawing attention from manager Cam Adams. Having worked with
+                    other popular acts (The Elephant In The Room, One Trick
+                    Pony, The Cat’s Meow), Adams was confident the band could
+                    succeed even further, pushing them to sign with Magenta
+                    Records.
+                  </p>
+                </div>
+                <div class="about__container--articale">
+                  <p class="articale-content">
+                    From there, the band has soared, gaining international
+                    recognition and ranking in the top 10 on the Poster Charts.
+                    New fans immediately fell in love with the band’s original
+                    and organic attitude, solidifying their place as one of the
+                    hottest and fastest up and coming acts of this century. Fans
+                    affectionately refer to themselves as “The Hive” and are
+                    drawn to their candid and authentic performances on stage.
+                    Looking forward to touring in the future, The Bees Knees are
+                    currently recording their second studio album, looking to be
+                    released in late 2021
+                  </p>
+                </div>
+              </div>
             </div>
-        </div>
           </div>
         </div>
       </section>
       <section class="gallery">
         <h2 class="gallery-heading">Photo Gallery</h2>
-        <div class="gallery__container">
-          <div class="gallery__container--img">
-            <img src="./assets/Images/Photo-gallery-1.jpg" alt="" />
+        <div class="gallery__contianer">
+          <div class="gallery__container--item">
+            <div class="container--img">
+              <img src="./assets/Images/Photo-gallery-1.jpg" alt="" />
+            </div>
+            <div class="container--img">
+              <img src="./assets/Images/Photo-gallery-2.jpg" alt="" />
+            </div>
+            <div class="container--img">
+              <img src="./assets/Images/Photo-gallery-3.jpg" alt="" />
+            </div>
+            <div class="container--img">
+              <img src="./assets/Images/Photo-gallery-4.jpg" alt="" />
+            </div>
+            <div class="container--img">
+              <img src="./assets/Images/Photo-gallery-5.jpg" alt="" />
+            </div>
+            <div class="container--img">
+              <img src="./assets/Images/Photo-gallery-6.jpg" alt="" />
+            </div>
+            <div class="container--img">
+              <img src="./assets/Images/Photo-gallery-7.jpg" alt="" />
+            </div>
+            <div class="container--img">
+              <img src="./assets/Images/Photo-gallery-8.jpg" alt="" />
+            </div>
+            <div class="container--img">
+              <img src="./assets/Images/Photo-gallery-9.jpg" alt="" />
+            </div>
           </div>
-          <div class="gallery__container--img">
-            <img src="./assets/Images/Photo-gallery-2.jpg" alt="" />
-          </div>
-          <div class="gallery__container--img">
-            <img src="./assets/Images/Photo-gallery-3.jpg" alt="" />
-          </div>
-          <div class="gallery__container--img">
-            <img src="./assets/Images/Photo-gallery-4.jpg" alt="" />
-          </div>
-          <div class="gallery__container--img">
-            <img src="./assets/Images/Photo-gallery-5.jpg" alt="" />
-          </div>
-          <div class="gallery__container--img">
-            <img src="./assets/Images/Photo-gallery-6.jpg" alt="" />
-          </div>
-          <div class="gallery__container--img">
-            <img src="./assets/Images/Photo-gallery-7.jpg" alt="" />
-          </div>
-          <div class="gallery__container--img">
-            <img src="./assets/Images/Photo-gallery-8.jpg" alt="" />
-          </div>
-          <div class="gallery__container--img">
-            <img src="./assets/Images/Photo-gallery-9.jpg" alt="" />
-          </div>
-        </div>
         </div>
       </section>
     </main>
     <footer>
       <div class="footer">
         <div class="footer__container">
-          <div class="footer--heading">
-            <h2>Get in Touch</h2>
-          </div>
-          <div class="footer__container--icon">
-            <a class="footer__link" href="http://instagram.com">
-              <img
-                src="./assets/Icons/SVG/Icon-instagram.svg"
-                alt="instagram"
-              />
-            </a>
-          </div>
-          <div class="footer__container--icon">
-            <a class="footer__icon--link" href="http://facebook.com">
-              <img src="./assets/Icons/SVG/Icon-facebook.svg" alt="facebook" />
-            </a>
-          </div>
-          <div class="footer__container--icon">
-            <a class="footer__icon--link" href="http://twitter.com">
-              <img src="./assets/Icons/SVG/Icon-twitter.svg" alt="twitter" />
-            </a>
-          </div>
-          <div class="footer__container--contact">
-            <p class="footer__container--name">Cam Adams</p>
-            <p class="footer__container--rule">The beens knees management</p>
-            <p class="footer__container--address">
-              503 Broadway penthouse,<br />
-              New York ,NY 10012,USA
-            </p>
-            <p class="footer__container--email">info@thebeesknees.com</p>
-          </div>
+            <div class="footer__container--box">
+                <div class="footer--heading">
+                    <h2>Get in Touch</h2>
+                </div>
+                <div class="footer__container--icon">
+                    <a class="footer__link" href="http://instagram.com">
+                    <img
+                        src="./assets/Icons/SVG/Icon-instagram.svg"
+                        alt="instagram"
+                    />
+                    </a>
+                </div>
+                <div class="footer__container--icon">
+                    <a class="footer__icon--link" href="http://facebook.com">
+                    <img src="./assets/Icons/SVG/Icon-facebook.svg" alt="facebook" />
+                    </a>
+                </div>
+                <div class="footer__container--icon">
+                    <a class="footer__icon--link" href="http://twitter.com">
+                    <img src="./assets/Icons/SVG/Icon-twitter.svg" alt="twitter" />
+                    </a>
+                </div>
+            </div>
+           <div class="footer__container--box">
+                <div class="footer__container--contact">
+                    <p class="footer__container--name">Cam Adams</p>
+                    <p class="footer__container--rule">The beens knees management</p>
+                    <p class="footer__container--address">
+                    503 Broadway penthouse,<br />
+                    New York ,NY 10012,USA
+                    </p>
+                    <p class="footer__container--email">info@thebeesknees.com</p>
+                </div>
 
-          <div class="footer__container--contact">
-            <p class="footer__container--name">Pearl Gregg</p>
-            <p class="footer__container--rule">Limitless Artist Group</p>
-            <p class="footer__container--address">
-              Booking agent for,<br />
-              US / South America / japan
-            </p>
-            <p class="footer__container--email">pearl.gregg@limitlessag.com</p>
-          </div>
-          <div class="footer__container--contact">
-            <p class="footer__container--name">Carson Whyte</p>
-            <p class="footer__container--rule">ARCH Entertainment</p>
-            <p class="footer__container--address">
-              Booking Agent for,<br />
-              UK / EU / AU
-            </p>
-            <p class="footer__container--email">cwtyte@archentertainment</p>
-          </div>
+                <div class="footer__container--contact">
+                    <p class="footer__container--name">Pearl Gregg</p>
+                    <p class="footer__container--rule">Limitless Artist Group</p>
+                    <p class="footer__container--address">
+                    Booking agent for,<br />
+                    US / South America / japan
+                    </p>
+                    <p class="footer__container--email">pearl.gregg@limitlessag.com</p>
+                </div>
+                <div class="footer__container--contact">
+                    <p class="footer__container--name">Carson Whyte</p>
+                    <p class="footer__container--rule">ARCH Entertainment</p>
+                    <p class="footer__container--address">
+                    Booking Agent for,<br />
+                    UK / EU / AU
+                    </p>
+                    <p class="footer__container--email">cwtyte@archentertainment</p>
+                </div>
+             </div> 
           <div class="footer__logo">
             <a href=""
               ><img
