chaning all margins for desktop and tablet

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <li class="navbar__list--item navbar__list--item-underline">
             Biography
           </li>
-          <li class="navbar__list--item">Shows</li>
+          <li class="navbar__list--item navbar__list--item-hover">Shows</li>
         </ul>
       </nav>
     </header>
