final touches of band site

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <section class="hero">
-      <h1 class="hero__heading">The Bees Knees</h1>
+      <p class="hero__heading">The Bees Knees</p>
     </section>
     <main>
       <section>
@@ -36,11 +36,11 @@
                 src="./assets/Images/band.jpg"
                 alt=""
               />
-              <p class="about__container--paragraph">
+              <p class="about__container--paragraph ">
                 “We push each other to be the best. It’s not uncommon for one of
                 us to say ‘this needs to be better, back to the drawing board’”
               </p>
-              <p class="about__container--paragraph">
+              <p class="about__container--paragraph about__container--paragraph-sub">
                 - Bryan Teddy, lead vocalist of The Bees Knees
               </p>
             </div>
