final touches band site

--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
                 src="./assets/Images/band.jpg"
                 alt=""
               />
-              <p class="about__container--paragraph ">
+              <p class="about__container--paragraph">
                 “We push each other to be the best. It’s not uncommon for one of
                 us to say ‘this needs to be better, back to the drawing board’”
               </p>
-              <p class="about__container--paragraph about__container--paragraph-sub">
+              <p
+                class="about__container--paragraph about__container--paragraph-sub"
+              >
                 - Bryan Teddy, lead vocalist of The Bees Knees
               </p>
             </div>
@@ -118,59 +120,64 @@
     <footer>
       <div class="footer">
         <div class="footer__container">
-            <div class="footer__container--box">
-                <div class="footer--heading">
-                    <h2>Get in Touch</h2>
-                </div>
-                <div class="footer__container--icon">
-                    <a class="footer__link" href="http://instagram.com">
-                    <img
-                        src="./assets/Icons/SVG/Icon-instagram.svg"
-                        alt="instagram"
-                    />
-                    </a>
-                </div>
-                <div class="footer__container--icon">
-                    <a class="footer__icon--link" href="http://facebook.com">
-                    <img src="./assets/Icons/SVG/Icon-facebook.svg" alt="facebook" />
-                    </a>
-                </div>
-                <div class="footer__container--icon">
-                    <a class="footer__icon--link" href="http://twitter.com">
-                    <img src="./assets/Icons/SVG/Icon-twitter.svg" alt="twitter" />
-                    </a>
-                </div>
+          <div class="footer__container--box">
+            <div class="footer--heading">
+              <h2>Get in Touch</h2>
             </div>
-           <div class="footer__container--box">
-                <div class="footer__container--contact">
-                    <p class="footer__container--name">Cam Adams</p>
-                    <p class="footer__container--rule">The beens knees management</p>
-                    <p class="footer__container--address">
-                    503 Broadway penthouse,<br />
-                    New York ,NY 10012,USA
-                    </p>
-                    <p class="footer__container--email">info@thebeesknees.com</p>
-                </div>
+            <div class="footer__container--icon">
+              <a class="footer__link" href="http://instagram.com">
+                <img
+                  src="./assets/Icons/SVG/Icon-instagram.svg"
+                  alt="instagram"
+                />
+              </a>
+            </div>
+            <div class="footer__container--icon">
+              <a class="footer__icon--link" href="http://facebook.com">
+                <img
+                  src="./assets/Icons/SVG/Icon-facebook.svg"
+                  alt="facebook"
+                />
+              </a>
+            </div>
+            <div class="footer__container--icon">
+              <a class="footer__icon--link" href="http://twitter.com">
+                <img src="./assets/Icons/SVG/Icon-twitter.svg" alt="twitter" />
+              </a>
+            </div>
+          </div>
+          <div class="footer__container--box">
+            <div class="footer__container--contact">
+              <p class="footer__container--name">Cam Adams</p>
+              <p class="footer__container--rule">The beens knees management</p>
+              <p class="footer__container--address">
+                503 Broadway penthouse,<br />
+                New York ,NY 10012,USA
+              </p>
+              <p class="footer__container--email">info@thebeesknees.com</p>
+            </div>
 
-                <div class="footer__container--contact">
-                    <p class="footer__container--name">Pearl Gregg</p>
-                    <p class="footer__container--rule">Limitless Artist Group</p>
-                    <p class="footer__container--address">
-                    Booking agent for,<br />
-                    US / South America / japan
-                    </p>
-                    <p class="footer__container--email">pearl.gregg@limitlessag.com</p>
-                </div>
-                <div class="footer__container--contact">
-                    <p class="footer__container--name">Carson Whyte</p>
-                    <p class="footer__container--rule">ARCH Entertainment</p>
-                    <p class="footer__container--address">
-                    Booking Agent for,<br />
-                    UK / EU / AU
-                    </p>
-                    <p class="footer__container--email">cwtyte@archentertainment</p>
-                </div>
-             </div> 
+            <div class="footer__container--contact">
+              <p class="footer__container--name">Pearl Gregg</p>
+              <p class="footer__container--rule">Limitless Artist Group</p>
+              <p class="footer__container--address">
+                Booking agent for,<br />
+                US / South America / japan
+              </p>
+              <p class="footer__container--email">
+                pearl.gregg@limitlessag.com
+              </p>
+            </div>
+            <div class="footer__container--contact">
+              <p class="footer__container--name">Carson Whyte</p>
+              <p class="footer__container--rule">ARCH Entertainment</p>
+              <p class="footer__container--address">
+                Booking Agent for,<br />
+                UK / EU / AU
+              </p>
+              <p class="footer__container--email">cwtyte@archentertainment</p>
+            </div>
+          </div>
           <div class="footer__logo">
             <a href=""
               ><img
