adding changes to nav bar list and resize tablet about

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       /></a>
       <nav class="navbar">
         <ul class="navbar__list">
-          <li class="navbar__list--item navbar__list--item-underline">
-            Biography
+          <li class="navbar__list--item navbar__list--item-underline"><a href="">Biography</a>
+           
           </li>
-          <li class="navbar__list--item navbar__list--item-hover">Shows</li>
+          <li class="navbar__list--item navbar__list--item-hover"><a href="">Shows</a></li>
         </ul>
       </nav>
     </header>
@@ -127,7 +127,7 @@
             <div class="footer__container--icon">
               <a class="footer__link" href="http://instagram.com">
                 <img
-                  src="./assets/Icons/SVG/Icon-instagram.svg"
+                  src="./assets/Icons/SVG/Icon-instagram.svg" width="30px"
                   alt="instagram"
                 />
               </a>
@@ -135,14 +135,14 @@
             <div class="footer__container--icon">
               <a class="footer__icon--link" href="http://facebook.com">
                 <img
-                  src="./assets/Icons/SVG/Icon-facebook.svg"
+                  src="./assets/Icons/SVG/Icon-facebook.svg" width="25px" height="33px"
                   alt="facebook"
                 />
               </a>
             </div>
             <div class="footer__container--icon">
               <a class="footer__icon--link" href="http://twitter.com">
-                <img src="./assets/Icons/SVG/Icon-twitter.svg" alt="twitter" />
+                <img src="./assets/Icons/SVG/Icon-twitter.svg" width="40px" alt="twitter" />
               </a>
             </div>
           </div>
