--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       /></a>
       <nav class="navbar">
         <ul class="navbar__list">
-          <li class="navbar__list--item navbar__list--item-underline"><a href="">Biography</a>
+          <li class="navbar__list--item navbar__list--item-underline"><a href="./index.html">Biography</a>
            
           </li>
-          <li class="navbar__list--item navbar__list--item-hover"><a href="">Shows</a></li>
+          <li class="navbar__list--item navbar__list--item-hover"><a href="./pages/shows.html">Shows</a></li>
         </ul>
       </nav>
     </header>
