--- a/pages/shows.html
+++ b/pages/shows.html
@@ -15,10 +15,10 @@
       /></a>
       <nav class="navbar">
         <ul class="navbar__list">
-          <li class="navbar__list--item navbar__list--item-underline"><a href="">Biography</a>
+          <li class="navbar__list--item navbar__list--item-underline"><a href="../index.html">Biography</a>
            
           </li>
-          <li class="navbar__list--item navbar__list--item-hover"><a href="">Shows</a></li>
+          <li class="navbar__list--item navbar__list--item-hover"><a href="./shows.html">Shows</a></li>
         </ul>
       </nav>
     </header>
@@ -41,16 +41,18 @@
                 <p class="show__header">DATE</p>
                 <p class="show__header">VENUE</p>
                 <p class="show__header show__header--location">LOCATION</p>
+               
+
             </div>
             <article class="booking__list">
                 <div class="show">
                     <p class="show__header--mobile">VENUE</p>
                     <p class="show__date">Mon Sept 06 2021</p>
-                    <p class="show__header--mobile">Avenu</p>
+                    <p class="show__header--mobile">Venue</p>
                     <p class="show__venue">Roland Lane</p>
                     <p class="show__header--mobile">LOCATION</p>
                     <p class="show__location">San Francisco, CA</p>
-                    <button class="show__btn">BUY TICKET</button>
+                    <button class="show__btn">BUY TICKETS</button>
                 </div>
             </article>
 
@@ -58,22 +60,22 @@
                 <div class="show">
                     <p class="show__header--mobile">VENUE</p>
                     <p class="show__date">Tue Sept 21 2021</p>
-                    <p class="show__header--mobile">Avenu</p>
+                    <p class="show__header--mobile">Venue</p>
                     <p class="show__venue">Pier 3 East</p>
                     <p class="show__header--mobile">LOCATION</p>
                     <p class="show__location">San Francisco, CA</p>
-                    <button class="show__btn">BUY TICKET</button>
+                    <button class="show__btn">BUY TICKETS</button>
                 </div>
             </article>
             <article class="booking__list">
                 <div class="show">
                     <p class="show__header--mobile">VENUE</p>
                     <p class="show__date">Fri Oct 15 2021</p>
-                    <p class="show__header--mobile">Avenu</p>
+                    <p class="show__header--mobile">Venue</p>
                     <p class="show__venue">View Lounge</p>
                     <p class="show__header--mobile">LOCATION</p>
                     <p class="show__location">San Francisco, CA</p>
-                    <button class="show__btn">BUY TICKET</button>
+                    <button class="show__btn">BUY TICKETS</button>
                 </div>
             </article>
 
@@ -81,11 +83,11 @@
                 <div class="show">
                     <p class="show__header--mobile">VENUE</p>
                     <p class="show__date">Sat Noc 06 2021</p>
-                    <p class="show__header--mobile">Avenu</p>
+                    <p class="show__header--mobile">Venue</p>
                     <p class="show__venue">Hyatt Agency</p>
                     <p class="show__header--mobile">LOCATION</p>
                     <p class="show__location">San Francisco, CA</p>
-                    <button class="show__btn">BUY TICKET</button>
+                    <button class="show__btn">BUY TICKETS</button>
                 </div>
             </article>
 
@@ -93,22 +95,22 @@
                 <div class="show">
                     <p class="show__header--mobile">VENUE</p>
                     <p class="show__date">Fri Nov 26 2021</p>
-                    <p class="show__header--mobile">Avenu</p>
+                    <p class="show__header--mobile">Venue</p>
                     <p class="show__venue">Moscow Center</p>
                     <p class="show__header--mobile">LOCATION</p>
                     <p class="show__location">San Francisco, CA</p>
-                    <button class="show__btn">BUY TICKET</button>
+                    <button class="show__btn">BUY TICKETS</button>
                 </div>
             </article>
             <article class="booking__list">
                 <div class="show">
                     <p class="show__header--mobile">VENUE</p>
                     <p class="show__date">Wed Dec 15 2021</p>
-                    <p class="show__header--mobile">Avenu</p>
+                    <p class="show__header--mobile">Venue</p>
                     <p class="show__venue">Press Club</p>
                     <p class="show__header--mobile">LOCATION</p>
                     <p class="show__location">San Francisco, CA</p>
-                    <button class="show__btn">BUY TICKET</button>
+                    <button class="show__btn">BUY TICKETS</button>
                 </div>
             </article>
         </div>
