finishing page js

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -15,10 +15,10 @@
       /></a>
       <nav class="navbar">
         <ul class="navbar__list">
-          <li class="navbar__list--item navbar__list--item-underline"><a href="../index.html">Biography</a>
+          <li class="navbar__list--item"><a href="../index.html">Biography</a>
            
           </li>
-          <li class="navbar__list--item navbar__list--item-hover"><a href="./shows.html">Shows</a></li>
+          <li class="navbar__list--item navbar__list--item-underline"><a href="./shows.html">Shows</a></li>
         </ul>
       </nav>
     </header>
