applying all my feedbackback from sprint-1

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <section class="hero">
-      <p class="hero__heading">The Bees Knees</p>
+      <h1 class="hero__heading">The Bees Knees</h1>
     </section>
     <main>
       <section>
