--- a/pages/shows.html
+++ b/pages/shows.html
@@ -26,7 +26,7 @@
     <section class="hero-shows">
         <div class="hero-shows__heading">
             <h2 class="shows__subhead">Beautiful Beasts album</h2>
-            <p class="shows__heading">Queen of Yellow <br> X for the stings</p>
+            <h1 class="shows__heading">Queen of Yellow <br> X for the stings</h1>
         </div>
         <div class="hero-shows-video">
             <iframe width="100%" height="100vh" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1555874839&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/soolking" title="Soolking" target="_blank" style="color: #cccccc; text-decoration: none;">Soolking</a> · <a href="https://soundcloud.com/soolking/casanova" title="Casanova" target="_blank" style="color: #cccccc; text-decoration: none;">Casanova</a></div>
@@ -191,5 +191,6 @@
           </div>
         </div>
       </footer>
+      <script src="../scripts/build-shows.pages.js"></script>
 </body>
 </html>
