adding javascript yo show page

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -34,88 +34,33 @@
     </section>
 
 
+
+
+
+
+
+
     <main>
-        <section class="booking">
-            <h2 class="booking__title">Shows</h2>
-            <div class="booking__tablet">
-                <p class="show__header">DATE</p>
-                <p class="show__header">VENUE</p>
-                <p class="show__header show__header--location">LOCATION</p>
-               
-
-            </div>
-            <article class="booking__list">
-                <div class="show">
-                    <p class="show__header--mobile">VENUE</p>
-                    <p class="show__date">Mon Sept 06 2021</p>
-                    <p class="show__header--mobile">Venue</p>
-                    <p class="show__venue">Roland Lane</p>
-                    <p class="show__header--mobile">LOCATION</p>
-                    <p class="show__location">San Francisco, CA</p>
-                    <button class="show__btn">BUY TICKETS</button>
-                </div>
-            </article>
-
-            <article class="booking__list">
-                <div class="show">
-                    <p class="show__header--mobile">VENUE</p>
-                    <p class="show__date">Tue Sept 21 2021</p>
-                    <p class="show__header--mobile">Venue</p>
-                    <p class="show__venue">Pier 3 East</p>
-                    <p class="show__header--mobile">LOCATION</p>
-                    <p class="show__location">San Francisco, CA</p>
-                    <button class="show__btn">BUY TICKETS</button>
-                </div>
-            </article>
-            <article class="booking__list">
-                <div class="show">
-                    <p class="show__header--mobile">VENUE</p>
-                    <p class="show__date">Fri Oct 15 2021</p>
-                    <p class="show__header--mobile">Venue</p>
-                    <p class="show__venue">View Lounge</p>
-                    <p class="show__header--mobile">LOCATION</p>
-                    <p class="show__location">San Francisco, CA</p>
-                    <button class="show__btn">BUY TICKETS</button>
-                </div>
-            </article>
-
-            <article class="booking__list">
-                <div class="show">
-                    <p class="show__header--mobile">VENUE</p>
-                    <p class="show__date">Sat Noc 06 2021</p>
-                    <p class="show__header--mobile">Venue</p>
-                    <p class="show__venue">Hyatt Agency</p>
-                    <p class="show__header--mobile">LOCATION</p>
-                    <p class="show__location">San Francisco, CA</p>
-                    <button class="show__btn">BUY TICKETS</button>
-                </div>
-            </article>
-
-            <article class="booking__list">
-                <div class="show">
-                    <p class="show__header--mobile">VENUE</p>
-                    <p class="show__date">Fri Nov 26 2021</p>
-                    <p class="show__header--mobile">Venue</p>
-                    <p class="show__venue">Moscow Center</p>
-                    <p class="show__header--mobile">LOCATION</p>
-                    <p class="show__location">San Francisco, CA</p>
-                    <button class="show__btn">BUY TICKETS</button>
-                </div>
-            </article>
-            <article class="booking__list">
-                <div class="show">
-                    <p class="show__header--mobile">VENUE</p>
-                    <p class="show__date">Wed Dec 15 2021</p>
-                    <p class="show__header--mobile">Venue</p>
-                    <p class="show__venue">Press Club</p>
-                    <p class="show__header--mobile">LOCATION</p>
-                    <p class="show__location">San Francisco, CA</p>
-                    <button class="show__btn">BUY TICKETS</button>
-                </div>
-            </article>
-        </div>
+        <section class="booking--section">
+       
         </section>
     </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <footer>
         <div class="footer">
           <div class="footer__container">
