fininal touch for sprint 2

--- a/index.html
+++ b/index.html
@@ -173,9 +173,8 @@
 
              <div class="feedback__container">
               <div class="feedback__container--img">
-               <i></i>
+                <i class="icon"></i>
               </div>
-               
               <div class="feedback__container--header">
                   <div class="feedback__header">
                     <p class="feedback__header--name">Emilie Beach</p>
@@ -192,7 +191,7 @@
 
              <div class="feedback__container">
               <div class="feedback__container--img">
-               <i></i>
+               <i class="icon"></i>
               </div>
                
               <div class="feedback__container--header">
