--- a/index.html
+++ b/index.html
@@ -296,6 +296,8 @@
         </div>
       </div>
     </footer>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="./scripts/band-site-api.js"></script>
     <script src="./scripts/index-page.js"></script>
   </body>
 </html>
