--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 </section>
 
 <section class="feedback">
-             <div class="feedback__container">
+              <!--   <div class="feedback__container">
               <div class="feedback__container--img">
                <i class="icon"></i>
               </div>
@@ -205,7 +205,7 @@
                     spine. What a beautiful expression of creativity. Can't get enough.
                   </p>
               </div>
-             </div>
+             </div>   -->
             
 
 
