--- a/pages/shows.html
+++ b/pages/shows.html
@@ -136,6 +136,8 @@
           </div>
         </div>
       </footer>
+      <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+      <script src="../scripts/band-site-api.js"></script>
       <script src="../scripts/build-shows.pages.js"></script>
 </body>
 </html>
