--- a/pages/shows.html
+++ b/pages/shows.html
@@ -1,143 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/shows.css">
-    <link rel="stylesheet" href="../styles/bio.css"/>
-   
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles/shows.css" />
+    <link rel="stylesheet" href="../styles/bio.css" />
+
     <title>bandsite</title>
   </head>
+
   <body>
     <header class="header">
-      <a href=""
-        ><img class="header__Logo" src="../assets/Logo/Logo-bandsite.svg" alt=""
+      <a href="../index.html"
+        ><img
+          class="header__Logo"
+          src="../assets/Logo/Logo-bandsite.svg"
+          alt=""
       /></a>
       <nav class="navbar">
         <ul class="navbar__list">
-          <li class="navbar__list--item"><a href="../index.html">Biography</a>
-           
+          <li class="navbar__list--item">
+            <a href="../index.html">Biography</a>
           </li>
-          <li class="navbar__list--item navbar__list--item-underline"><a href="./shows.html">Shows</a></li>
+          <li class="navbar__list--item navbar__list--item-underline">
+            <a href="./shows.html">Shows</a>
+          </li>
         </ul>
       </nav>
     </header>
 
     <section class="hero-shows">
-        <div class="hero-shows__heading">
-            <h2 class="shows__subhead">Beautiful Beasts album</h2>
-            <h1 class="shows__heading">Queen of Yellow <br> X for the stings</h1>
+      <div class="hero-shows__heading">
+        <h2 class="shows__subhead">Beautiful Beasts album</h2>
+        <h1 class="shows__heading">
+          Queen of Yellow <br />
+          X for the stings
+        </h1>
+      </div>
+      <div class="hero-shows-video">
+        <iframe
+          width="100%"
+          height="100vh"
+          scrolling="no"
+          frameborder="no"
+          allow="autoplay"
+          src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1555874839&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
+        ></iframe>
+        <div
+          style="
+            font-size: 10px;
+            color: #cccccc;
+            line-break: anywhere;
+            word-break: normal;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            font-family: Interstate, Lucida Grande, Lucida Sans Unicode,
+              Lucida Sans, Garuda, Verdana, Tahoma, sans-serif;
+            font-weight: 100;
+          "
+        >
+          <a
+            href="https://soundcloud.com/soolking"
+            title="Soolking"
+            target="_blank"
+            style="color: #cccccc; text-decoration: none"
+            >Soolking</a
+          >
+          ·
+          <a
+            href="https://soundcloud.com/soolking/casanova"
+            title="Casanova"
+            target="_blank"
+            style="color: #cccccc; text-decoration: none"
+            >Casanova</a
+          >
         </div>
-        <div class="hero-shows-video">
-            <iframe width="100%" height="100vh" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1555874839&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/soolking" title="Soolking" target="_blank" style="color: #cccccc; text-decoration: none;">Soolking</a> · <a href="https://soundcloud.com/soolking/casanova" title="Casanova" target="_blank" style="color: #cccccc; text-decoration: none;">Casanova</a></div>
-        </div>
+      </div>
     </section>
 
-
-
-
-
-
-
-
     <main>
-        <section class="booking--section">
-       
-        </section>
+      <section class="booking--section"></section>
     </main>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <footer>
-        <div class="footer">
-          <div class="footer__container">
-            <div class="footer__container--box">
-              <div class="footer--heading">
-                <h2>Get in Touch</h2>
-              </div>
-              <div class="footer__container--icon">
-                <a class="footer__link" href="http://instagram.com">
-                  <img
-                    src="../assets/Icons/SVG/Icon-instagram.svg" width="30px"
-                    alt="instagram"
-                  />
-                </a>
-              </div>
-              <div class="footer__container--icon">
-                <a class="footer__icon--link" href="http://facebook.com">
-                  <img
-                    src="../assets/Icons/SVG/Icon-facebook.svg" width="25px" height="33px"
-                    alt="facebook"
-                  />
-                </a>
-              </div>
-              <div class="footer__container--icon">
-                <a class="footer__icon--link" href="http://twitter.com">
-                  <img src="../assets/Icons/SVG/Icon-twitter.svg" width="40px" alt="twitter" />
-                </a>
-              </div>
+      <div class="footer">
+        <div class="footer__container">
+          <div class="footer__container--box">
+            <div class="footer--heading">
+              <h2>Get in Touch</h2>
             </div>
-            <div class="footer__container--box">
-              <div class="footer__container--contact">
-                <p class="footer__container--name">Cam Adams</p>
-                <p class="footer__container--rule">The beens knees management</p>
-                <p class="footer__container--address">
-                  503 Broadway penthouse,<br />
-                  New York ,NY 10012,USA
-                </p>
-                <p class="footer__container--email">info@thebeesknees.com</p>
-              </div>
-  
-              <div class="footer__container--contact">
-                <p class="footer__container--name">Pearl Gregg</p>
-                <p class="footer__container--rule">Limitless Artist Group</p>
-                <p class="footer__container--address">
-                  Booking agent for,<br />
-                  US / South America / japan
-                </p>
-                <p class="footer__container--email">
-                  pearl.gregg@limitlessag.com
-                </p>
-              </div>
-              <div class="footer__container--contact">
-                <p class="footer__container--name">Carson Whyte</p>
-                <p class="footer__container--rule">ARCH Entertainment</p>
-                <p class="footer__container--address">
-                  Booking Agent for,<br />
-                  UK / EU / AU
-                </p>
-                <p class="footer__container--email">cwtyte@archentertainment</p>
-              </div>
+            <div class="footer__container--icon">
+              <a class="footer__link" href="http://instagram.com">
+                <img
+                  src="../assets/Icons/SVG/Icon-instagram.svg"
+                  width="30px"
+                  alt="instagram"
+                />
+              </a>
             </div>
-            <div class="footer__logo">
-              <a href=""
-                ><img
-                  class="footer__logo-img"
-                  src="../assets/Logo/Logo-bandsite.svg"
-                  alt=""
-              /></a>
+            <div class="footer__container--icon">
+              <a class="footer__icon--link" href="http://facebook.com">
+                <img
+                  src="../assets/Icons/SVG/Icon-facebook.svg"
+                  width="25px"
+                  height="33px"
+                  alt="facebook"
+                />
+              </a>
             </div>
-            <div class="footer__copy">
-              <p>copyright The Bees Knees &copy; 2021 all rights Reserved</p>
+            <div class="footer__container--icon">
+              <a class="footer__icon--link" href="http://twitter.com">
+                <img
+                  src="../assets/Icons/SVG/Icon-twitter.svg"
+                  width="40px"
+                  alt="twitter"
+                />
+              </a>
             </div>
           </div>
+          <div class="footer__container--box">
+            <div class="footer__container--contact">
+              <p class="footer__container--name">Cam Adams</p>
+              <p class="footer__container--rule">The beens knees management</p>
+              <p class="footer__container--address">
+                503 Broadway penthouse,<br />
+                New York ,NY 10012,USA
+              </p>
+              <p class="footer__container--email">info@thebeesknees.com</p>
+            </div>
+
+            <div class="footer__container--contact">
+              <p class="footer__container--name">Pearl Gregg</p>
+              <p class="footer__container--rule">Limitless Artist Group</p>
+              <p class="footer__container--address">
+                Booking agent for,<br />
+                US / South America / japan
+              </p>
+              <p class="footer__container--email">
+                pearl.gregg@limitlessag.com
+              </p>
+            </div>
+            <div class="footer__container--contact">
+              <p class="footer__container--name">Carson Whyte</p>
+              <p class="footer__container--rule">ARCH Entertainment</p>
+              <p class="footer__container--address">
+                Booking Agent for,<br />
+                UK / EU / AU
+              </p>
+              <p class="footer__container--email">cwtyte@archentertainment</p>
+            </div>
+          </div>
+          <div class="footer__logo">
+            <a href=""
+              ><img
+                class="footer__logo-img"
+                src="../assets/Logo/Logo-bandsite.svg"
+                alt=""
+            /></a>
+          </div>
+          <div class="footer__copy">
+            <p>copyright The Bees Knees &copy; 2021 all rights Reserved</p>
+          </div>
         </div>
-      </footer>
-      <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-      <script src="../scripts/band-site-api.js"></script>
-      <script src="../scripts/build-shows.pages.js"></script>
-</body>
+      </div>
+    </footer>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="../scripts/band-site-api.js"></script>
+    <script src="../scripts/build-shows.pages.js"></script>
+  </body>
 </html>
